# pathfinding

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: requirements_specification.md  structure.md  testing_and_benchmarks.md  usage_instructions.md
docs/weekly_reports/: week_1.md  week_2.md  week_3.md  week_4.md  week_5.md  week_6.md
src/: all_algorithms.cpp  all_algorithms.hpp  main.cpp  renderer.cpp  renderer.hpp  state.hpp  view.hpp
src/algorithms/: a_star.cpp  a_star.hpp  algorithm.hpp  bbfs.cpp  bbfs.hpp  bucket_queue.hpp  common.cpp  common.hpp  jps.cpp  jps.hpp  optimized_a_star.cpp  optimized_a_star.hpp  util.cpp  util.hpp
tests/: benchmarker.cpp  benchmarker.hpp  main.cpp  main.hpp  scenario_scrambler.py  test_algorithms.cpp  test_bucket_queue.cpp  test_map.map  test_util.cpp
tests/hog2/: Map.cpp  Map.h  ScenarioLoader.h
