cmake_minimum_required(VERSION 3.10)
project(pathfinding)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
find_package(SFML COMPONENTS system window graphics REQUIRED)
file(GLOB_RECURSE PATHFINDING_SRC CONFIGURE_DEPENDS "src/*.cpp")
add_executable(pathfinding "${PATHFINDING_SRC}")
target_link_libraries(pathfinding sfml-graphics)
target_include_directories(pathfinding PRIVATE "${PROJECT_SOURCE_DIR}/src")